ingress-controller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.dhille.shop
      http:
        paths:
          - path: /preschool
            pathType: Prefix
            backend:
              service:
                name: preschool-svc
                port: 
                  number: 80
          - path: /skate
            pathType: Prefix
            backend:
              service:
                name: skate-svc
                port: 
                  number: 80
